# BattleFortune

./: .gitignore  LICENSE  README.md  a-file-icons.xml  batchrunner.py  battlefortune.py  calc.py  colors.scheme.xml  decode.py  dict.py  filetypes.xml  github.xml  ide.general.xml  ignore.xml  kite.settings.xml  logcalc.py  logparser.py  main.py  material_theme.xml  pyproject.toml  requirements.txt  setup.py  turnhandler.py  unit_gc.py  vcs.xml
_mac/: laf.xml
battlefortune/: batchrunner.py  battlefortune.py  calc.py  calculate.py  decode.py  logcalc.py  logparser.py  prepare.py  read.py  run.py  turnhandler.py  visualization.py  visualize.py
battlefortune/data/: battlelog.yaml  config.yaml
battlefortune/logs/: battlelog.yaml  winlog.yaml
colors/: _@user_Darcula.icls
data/: config.yaml  nations  nations.json  nations.txt  nations.yaml  units  units.json  units.yaml
data/dicts/: uName.dir  units.bak
keymaps/: macOS copy.xml
src/: battlefortune.py  calculate.py  config.py  decode.py  globals.py  gui.py  observer.py  platform.py  process.py  read.py  run.py  utility.py  visualize.py
